--- a/faq/core-questions/project-structure.mdx
+++ b/faq/core-questions/project-structure.mdx
@@ -1,224 +1,204 @@
 ---
-title: "Understanding Project Structure and Integration"
-description: "Explains typical project layouts, how GoogleTest and GoogleMock fit into your source tree, recommended integration strategies, and how to organize your tests. Addresses questions about including, linking, and finding the right headers or entry points."
+title: "How should I organize my tests?"
+description: "Best practices for structuring your codebase, naming conventions, and placing test files when using GoogleTest and GoogleMock. Aids users in kickstarting a maintainable test suite."
 ---
 
-# Understanding Project Structure and Integration
+# How Should I Organize My Tests?
 
-GoogleTest and GoogleMock are integral tools for writing C++ unit tests and mock objects, respectively. This page guides you through organizing your project layout to incorporate these frameworks properly, clarifies how to include and link necessary headers and libraries, and offers best practices for seamless integration and test organization.
-
----
-
-## Typical Project Layouts
-
-A well-structured project makes integrating GoogleTest and GoogleMock straightforward while keeping your test code modular and maintainable.
-
-### Common Layout Approaches
-
-- **Separate Test Directory:**
-  Maintain a distinct `tests/` or `test/` directory within your source tree solely for test code, isolating test-specific files from production code.
-
-- **Embedded Tests Next to Source Files:**
-  Place test files adjacent to the source files they test, often using different file extensions or naming conventions like `foo.cpp` and `foo_test.cpp`.
-
-- **Mixed Layout:**
-  Combine both approaches, separating larger test suites but grouping small unit tests nearby to their implementation.
-
-### Recommended Structure Example
-```
-/project-root
-  /src                 # Production code source files
-    foo.cpp
-    bar.cpp
-  /include             # Header files
-    foo.h
-    bar.h
-  /tests               # Test source files
-    foo_test.cpp       # GoogleTest unit tests
-    bar_test.cpp
-    mocks/             # GoogleMock mock classes
-      mock_foo.cpp
-  CMakeLists.txt       # Build configuration
-```
-
-This layout clearly distinguishes production code from tests, making it easier to manage, build, and scale.
+Structuring your test codebase effectively is essential to build a maintainable, scalable, and easy-to-navigate test suite using GoogleTest and GoogleMock. This guide provides best practices for organizing test files, naming conventions, and where to place your tests within your project. Whether you're kickstarting your first tests or expanding an existing suite, these recommendations will help you achieve clarity and long-term maintainability.
 
 ---
 
-## Integrating GoogleTest and GoogleMock Into Your Source Tree
+## 1. Where Should I Put My Test Files?
 
-There are several viable strategies for incorporating GoogleTest and GoogleMock into your project, each with trade-offs in flexibility, maintenance, and build complexity.
+The placement of your test files should follow the logical organization of your production code. Common strategies include:
 
-### 1. Using Installed Libraries and Headers
-
-If you have installed GoogleTest and GoogleMock on your system (e.g., via package managers or manual install), your project can simply reference these via `find_package` in CMake or equivalent in other build systems.
-
-```cmake
-find_package(GTest CONFIG REQUIRED)
-
-add_executable(my_tests test/foo_test.cpp)
-target_link_libraries(my_tests GTest::gtest GTest::gmock GTest::gtest_main)
-add_test(NAME my_tests COMMAND my_tests)
-```
-
-**Advantages:** Easy to manage, keeps your codebase clean.
-
-**Disadvantages:** Updates rely on system libraries, less control over versions.
-
-### 2. Embedding GoogleTest Source Directly
-
-You can add GoogleTest (and GoogleMock) source code directly in your project source tree, commonly using:
-
-- Git submodules
-- Direct copy of source
-- Fetching using CMake's `FetchContent`
-
-This allows building GoogleTest alongside your code, using the same compiler settings, ensuring ABI compatibility.
-
-**Example CMake snippet:**
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/v1.17.0.tar.gz
-)
-# Sets runtime linkage on Windows to match project
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-add_executable(my_tests test/foo_test.cpp)
-target_link_libraries(my_tests gtest_main gmock_main)
-add_test(NAME my_tests COMMAND my_tests)
-```
-
-**Advantages:** Builds with consistent settings, easier CI integration.
-
-**Disadvantages:** Slightly more complex setup, source tree grows.
-
----
-
-## Including Headers and Linking
-
-To effectively write and compile tests, you need to correctly include GoogleTest/GoogleMock headers and link their libraries.
-
-### Headers
-
-- Include GoogleTest headers with:
-  ```cpp
-  #include <gtest/gtest.h>
+- **Parallel Directory Structure:** Mirror your source folders in a separate test directory. For example:
+  
   ```
-- For GoogleMock features, include:
+  /src/my_component/
+  /tests/my_component/
+  ```
+  This makes it straightforward to locate tests related to specific source files.
+
+- **Inline Tests:** Place test files next to the implementation files they cover. This is often practical for smaller codebases or early-stage projects but can become cluttered as the project grows.
+
+- **Dedicated Test Directories:** Group tests by feature, module, or layer under a centralized `tests/` or `test/` directory. This can simplify build system configuration and running tests.
+
+Choose the structure that best fits your project size and team preferences. Most large projects benefit from parallel directory structures to keep source and test clearly separated but logically connected.
+
+---
+
+## 2. Naming Conventions for Test Files
+
+Consistent naming makes your test suite intuitive and helps automatic test discovery. Here are recommended naming guidelines:
+
+- **Suffix Test Files with `_test.cc` or `_unittest.cc`:** For example, if your source file is `calculator.cc`, the test file should be named `calculator_test.cc`.
+
+- **Use Descriptive Names for Test Suites:** If your tests cover a distinct module or feature, prefix test files accordingly, e.g., `string_utils_test.cc`.
+
+- **Avoid Ambiguous Names:** Ensure test files clearly indicate what they are testing to help developers locate relevant tests quickly.
+
+- **Follow Your Build System’s Naming Expectations:** Some build tools or CI configurations expect certain suffix patterns to identify test binaries.
+
+---
+
+## 3. Organizing Test Suites and Cases
+
+Within your test files, organize tests to reflect your code structure and testing goals:
+
+- **Use `TEST()` and `TEST_F()` Macros Thoughtfully:**
+  - Use `TEST()` for simple, standalone test cases.
+  - Use `TEST_F()` for tests requiring shared fixtures or setup/teardown logic.
+
+- **Group Related Tests into Suites:** Test suites should reflect logical units such as classes, modules, or functionalities.
+
+- **Use Descriptive Test Case Names:** Naming is critical for readability and debugging. For example:
   ```cpp
-  #include <gmock/gmock.h>
+  TEST(Calculator, AddsTwoNumbersCorrectly) {
+    // ...
+  }
+
+  TEST_F(DatabaseTest, ConnectsSuccessfully) {
+    // ...
+  }
   ```
 
-Both headers bring in essential declarations and setup.
-
-### Linking Libraries
-
-Link against appropriate libraries depending on your build setup:
-
-| Scenario                            | Libraries to Link                  |
-|-----------------------------------|----------------------------------|
-| Using Installed GTest/GMock        | `GTest::gtest`, `GTest::gmock`, and optionally `GTest::gtest_main` |
-| Building from source with FetchContent | `gtest_main`, `gmock_main` or `gtest`, `gmock` if customized |
-
-**Note:** Linking `gtest_main` or `gmock_main` provides a main() implementation that runs all tests, simplifying the test binary.
+- **Parameterize Tests When Appropriate:** For repeated tests with varying inputs, consider using parameterized tests (`TEST_P()`) to avoid redundant code.
 
 ---
 
-## Finding Headers and Libraries
+## 4. Structuring Tests When Using GoogleMock
 
-Build systems typically locate GoogleTest/GoogleMock through:
+When your tests involve mocks, organize your code to separate production code, test helpers, and mocks:
 
-- **`find_package()`**: Works when GoogleTest is installed on the system.
-- **`add_subdirectory()`**: For building GoogleTest as part of your project.
-- **`FetchContent` or other download methods**: Automates dependency fetching.
+- **Put Mock Classes in Separate Headers and Sources:**
+  - Place mock class definitions logically close to related tests.
+  - Name mocks with clear `Mock` prefixes, e.g., `MockDatabase`.
 
-You may need to specify include directories and library paths explicitly if your build system cannot find them automatically.
+- **Place Mock-Related Setup in the Same Test File When Simple:**
+  For small test suites, defining mocks within a test source file works well.
 
----
+- **Use Fixtures to Encapsulate Common Mock Setup:**
+  This reduces boilerplate for tests sharing mock configuration.
 
-## Organizing Your Tests for Best Practices
-
-To maintain clarity and ease of maintenance:
-
-- **Group related tests into test suites** using `TEST()` or `TEST_F()` macros.
-- **Use test fixtures** to share common setup and teardown.
-- **Separate mocks into distinct files/directories** to avoid cluttering test code.
-- **Name test files clearly** to indicate their purpose (e.g., `foo_test.cpp`).
-- **Keep production and test dependencies isolated** in your build.
+- **Adopt Clear Naming for Mock Methods:** Use the `MOCK_METHOD` macro consistently; method names should match those of the interfaces they mock.
 
 ---
 
-## Frequently Asked Questions
+## 5. Establishing a Test Entry Point
 
-<AccordionGroup title="FAQ - Project Structure and Integration">
-<Accordion title="How do I add GoogleTest to my existing CMake project?">
-The simplest approach is to use CMake's `FetchContent` module (requires CMake 3.14+) to download GoogleTest during configuration and then link your test executables against it. Alternatively, install GoogleTest system-wide and use `find_package(GTest REQUIRED)`.
+Running tests requires a `main()` function that initializes GoogleTest and GoogleMock and executes the test runner:
+
+- **Prefer Using `gtest_main` or `gmock_main` Libraries:**
+  These provide a default `main()` implementation that calls `RUN_ALL_TESTS()` and sets up GoogleMock if needed.
+
+- **Avoid Defining Multiple `main()` Functions:**
+  Having duplicate `main()` functions can cause linker errors.
+
+- **Customize `main()` Only When Necessary:**
+  If you need to perform special setup or teardown, write your own `main()` and initialize GoogleTest/GoogleMock with `testing::InitGoogleMock(&argc, argv);`.
+
+Example of a custom main function:
+
+```cpp
+#include "gmock/gmock.h"
+
+int main(int argc, char **argv) {
+  testing::InitGoogleMock(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+---
+
+## 6. Best Practices for Maintainable Test Suites
+
+- **Keep Tests Small and Focused:** Each test should verify one behavior to simplify diagnosis.
+
+- **Avoid Test Interdependencies:** Tests should run independently to prevent hidden failures.
+
+- **Name Tests Clearly and Consistently:** This aids in reading logs and reports.
+
+- **Organize Helpers and Utilities Separately:** Reuse helper functions and mock setups placed in dedicated files.
+
+- **Leverage Build System Features:** Use CMake or your project's build tool to automatically detect and compile tests, linking against `gtest`, `gmock`, or the appropriate main libraries.
+
+- **Document Test Structure in Project README or Docs:** Help new contributors onboard quickly by clearly explaining how tests are organized.
+
+---
+
+## 7. Sample Directory Structure Example
+
+```
+project_root/
+├── src/
+│   ├── calculator.cc
+│   └── calculator.h
+├── tests/
+│   ├── calculator_test.cc
+│   ├── mocks/
+│   │   └── mock_database.h
+│   └── fixtures/
+│       └── calculator_fixture.h
+├── CMakeLists.txt
+└── README.md
+```
+
+This organization clearly separates production code from tests, with mocks and fixtures logically grouped.
+
+---
+
+## 8. Troubleshooting Common Test Organization Issues
+
+<AccordionGroup title="Common Setup and Organization Issues">
+<Accordion title="Linker Errors Due to Multiple main() Functions">
+
+If you link with both `gtest_main` and `gmock_main` or define your own `main()`, you may get multiple main-defined errors.
+
+**Solution:** Link with only one main library (`gtest_main` or `gmock_main`) or provide a single, custom `main()`.
+
 </Accordion>
-<Accordion title="Can I build GoogleTest and GoogleMock as shared libraries?">
-Yes. You can compile GoogleTest with `-DGTEST_CREATE_SHARED_LIBRARY=1` and link your tests with `-DGTEST_LINKED_AS_SHARED_LIBRARY=1`. This approach requires managing shared library paths appropriately.
+<Accordion title="Tests Not Being Discovered or Run">
+
+Ensure your test files follow naming conventions the build system expects (e.g., suffix `_test.cc`). Also, confirm your test binaries link with GoogleTest libraries correctly.
+
 </Accordion>
-<Accordion title="Where should I put my test source files?">
-A common pattern is to create a dedicated `tests/` directory within your project root. This cleanly separates test code from production code and eases build setup.
-</Accordion>
-<Accordion title="How do I avoid macro conflicts with GoogleTest?">
-If GoogleTest macros conflict with another library, define the appropriate control macros (such as `-DGTEST_DONT_DEFINE_TEST=1`) to rename conflicting macros. You'll then use the renamed macros like `GTEST_TEST` instead of `TEST`.
+<Accordion title="Mixing Mock and Non-Mock Tests"
+>
+To keep test suites understandable, separate mocking concerns into distinct test files or fixtures.
+
+Use `gmock_main` to initialize GoogleMock correctly in tests needing mocks.
+
 </Accordion>
 </AccordionGroup>
 
 ---
 
-## Troubleshooting Common Integration Issues
+## 9. Additional Tips
 
-### Compiler and Linking Errors
-- **Missing Headers**: Ensure your include paths point to GoogleTest's `include` directories.
-- **Undefined References**: Check that you link against both `gtest` and `gmock` libraries as needed.
-- **Runtime Errors**: Verify that your test binary links with `gtest_main` or provide your own `main()`.
+<Tip>
+Use your build system to automate test discovery and execution. For example, CMake's `add_test()` integrates GoogleTest binaries into your CI pipeline seamlessly.
+</Tip>
 
-### Build Mismatches
-- On Windows, incompatible runtime linkage (dynamic vs static) can cause linker errors. Use the `gtest_force_shared_crt` CMake option to synchronize runtime linkage with your project.
+<Tip>
+Keep test files close in structure and naming to the source code they verify — this improves trackability as your codebase evolves.
+</Tip>
 
----
-
-## Useful Tips
-
-- Always keep GoogleTest and GoogleMock versions aligned.
-- Leverage CMake's built-in support and conventions for GoogleTest to minimize manual configuration.
-- Organize mocks in separate files to improve readability.
-- Write small, focused tests grouped logically in suites.
+<Tip>
+Adopt parameterized tests to avoid redundancy and simplify complex testing scenarios.
+</Tip>
 
 ---
 
-## Visual Diagram of Integration Flow
+## 10. Related Documentation
 
-```mermaid
-flowchart TD
-  A[Project Source Tree] --> B[Source Files (/src, /include)]
-  A --> C[Test Files (/tests)]
-  C --> D[GoogleTest & GoogleMock Source/Submodules]
-  D --> E[CMakeLists.txt adds GoogleTest using add_subdirectory or FetchContent]
-  E --> F[Compile Test Executables]
-  F --> G[Link with gtest, gmock, and main libraries]
-  G --> H[Run Tests: Automatic Test Discovery & Execution]
-```
+- [Writing Your First Test](/guides/core_testing_workflows/writing_first_test) — Learn how to define and write your initial tests.
+- [Using GoogleMock](/guides/core_testing_workflows/using_googlemock) — Guidance on mock creation and expectations.
+- [Integrating With Build Systems](/guides/integration_real_world_use/build_system_integration) — Set up CMake or Bazel for test builds.
+- [Test Discovery and Execution](/guides/core_testing_workflows/test_discovery_execution) — Understand how tests are found and run.
+- [Troubleshooting Common Issues](/getting-started/troubleshooting-validation/common-issues) — Diagnose common problems.
 
 ---
 
-For detailed build instructions and integration code examples, consult the [GoogleTest README](https://github.com/google/googletest/blob/main/googletest/README.md) and the [Installing with CMake guide](https://github.com/google/googletest/blob/main/googletest/README.md#build-with-cmake).
-
----
-
-**Next Steps:**
-- Read [Configure Your Project](../getting-started/basic-setup-first-test/configure-project) for practical setup examples.
-- Explore [Getting Started with GoogleTest](../guides/core-workflows/getting-started) for writing your first tests.
-- Consult [Troubleshooting Common Issues](../getting-started/troubleshooting-validation/common-issues) if you encounter build or runtime problems.
-
----
-
-## References
-- [GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [GoogleTest README - Build Instructions](https://github.com/google/googletest/blob/main/googletest/README.md)
-- [GoogleTest Primer](../overview/introduction-product-value/what-is-googletest)
-- [CMake Integration Patterns](../concepts/extensibility-and-integration/integration-build-systems)
+By adhering to these structuring and naming strategies, you will establish a robust and maintainable test suite that grows alongside your project and supports smooth development workflows.
