--- a/faq/troubleshooting/build-issues.mdx
+++ b/faq/troubleshooting/build-issues.mdx
@@ -1,195 +1,189 @@
 ---
-title: "Why won't GoogleTest or GoogleMock build in my environment?"
-description: "A collection of troubleshooting tips for common build errors, missing dependencies, and environment misconfigurations. Includes references to minimum version requirements and configuration files for various build systems."
+title: "Build and Linking Errors"
+description: "Frequently encountered build and linking problems and how to fix them: missing symbols, CMake/Bazel misconfigurations, and typical platform quirks. Offers diagnostic steps and references known-issues documentation."
 ---
 
-# Why won't GoogleTest or GoogleMock build in my environment?
+# Build and Linking Errors
 
-This FAQ page provides a detailed collection of troubleshooting tips addressing common build errors, missing dependencies, and environment misconfigurations encountered when building GoogleTest and GoogleMock. It also includes references to minimum version requirements and necessary configuration files for various build systems.
-
----
-
-## 1. Common Build Issues with GoogleTest and GoogleMock
-
-### 1.1 Missing or Outdated Compiler Support
-
-GoogleTest and GoogleMock require a **C++17 compliant compiler**. Common issues include:
-
-- **Compiler too old or not fully supporting C++17:**
-  - Ensure your compiler version meets the minimum requirements (e.g., GCC >=7, Clang >=7, MSVC 2017 or later).
-  - Use appropriate compiler flags such as `-std=c++17` on GCC/Clang or `/std:c++17` on MSVC.
-
-- **Not linking to required libraries:**
-  - Build or link against the proper GoogleTest and GoogleMock libraries.
-  - Ensure both header and compiled libraries are from compatible versions.
-
-### 1.2 Missing Dependencies or Environment Setup
-
-- **Threading support:** GoogleTest requires a threading library compatible with your platform. Missing `-lpthread` on Linux can cause linking failures.
-
-- **Filesystem and standard library compatibility:** Some platforms or older standard libraries may lack required C++17 filesystem or tuple support.
-
-- Check your environment for incomplete or conflicting standard library installations.
-
-### 1.3 Incomplete or Incorrect Build Configuration
-
-- **Build system setup issues:** 
-  - Make sure to correctly add GoogleTest and GoogleMock as dependencies in your build system.
-  - In CMake, link using `target_link_libraries(your_test_target gtest gmock)` or use provided CMake targets.
-  - For Bazel, ensure your `WORKSPACE` and BUILD files declare GoogleTest and GoogleMock dependencies properly.
-
-- **Include path misconfiguration:** 
-  - Verify the include directories point to where `gtest` and `gmock` headers are located.
-
-- **Mixed versions or stale builds:**
-  - Clean your build directory and rebuild from scratch after updating source or toolchain.
-
-### 1.4 Platform-Specific Considerations
-
-- Windows systems may require different calling conventions or additional flags (e.g., using `Calltype(STDMETHODCALLTYPE)` qualifier in `MOCK_METHOD`).
-- MSVC users may see warnings or errors related to const parameters and method overriding; removing top-level `const` qualifiers in arguments often resolves such issues.
+This page addresses frequently encountered problems during the build and linking phase when using GoogleTest and GoogleMock, focusing on typical issues like missing symbols, CMake or Bazel misconfigurations, and platform-specific quirks. It provides diagnostic steps and directs you to known issues documentation for deeper insights.
 
 ---
 
-## 2. Minimum Version and Configuration Requirements
+## Common Build and Linking Issues
 
-### 2.1 Compiler Requirements
+### Why am I seeing "undefined reference" or missing symbol errors when linking GoogleTest?
 
-| Compiler | Minimum Version | Notes |
-| -------- | --------------- | ----- |
-| GCC      | 7 or later      | Use `-std=c++17` flag.|
-| Clang    | 7 or later      | Use `-std=c++17` flag.| 
-| MSVC     | Visual Studio 2017 (15.7+) | Use `/std:c++17` flag.
+These errors typically indicate that the linker cannot find the GoogleTest libraries your test binary depends on. Common causes include:
 
-### 2.2 Build Systems Configuration Files
+- Forgetting to link your test executable against the `gtest` or `gtest_main` library.
+- Mismatching build settings, such as mixing static and shared builds, or conflicts between CRT linkage on Windows.
+- Not compiling or including GoogleTest sources correctly.
 
-- **CMake:**
-  - Must locate GoogleTest correctly using `find_package(GTest REQUIRED)` or add it as part of your source tree.
-  - Link targets against `gtest` and `gmock`.
-  - Example:
+**How to resolve:**
 
-  ```cmake
-  find_package(GTest REQUIRED)
-  add_executable(my_test my_test.cc)
-  target_link_libraries(my_test GTest::gtest GTest::gmock pthread)
-  ```
+- Ensure you link your test binary to either `gtest` or `gtest_main` (the latter provides a default `main()` function).
+- On Windows, consider using the CMake option `gtest_force_shared_crt` if your project uses the dynamic runtime library (`/MD` or `/MDd`).
+- When building from source with CMake, ensure you include the GoogleTest source directory via `add_subdirectory()` or via FetchContent.
 
-- **Bazel:**
-  - Declare dependencies in `WORKSPACE` using git_repository or HTTP archive with correct SHA.
-  - Reference `@com_google_googletest//:gmock` or relevant targets in BUILD files.
+### Why do I see linker errors about multiple definitions or main() conflicts?
 
----
+GoogleTest provides its own main function via the `gtest_main` library. If you:
 
-## 3. Practical Troubleshooting Tips
+- Link both `gtest_main` and provide your own `main()`, you’ll have multiple definition errors.
+- Link only `gtest` (without `gtest_main`) but do not define your own `main()`, the linker will complain about missing entry points.
 
-### 3.1 Diagnosing Build Failures
+**How to resolve:**
 
-- **Check compiler invocation commands:**
-  - Ensure C++17 standard flags are present.
-  - Inspect include directories and linked libraries.
+- Link `gtest_main` if you want GoogleTest’s default `main()`.
+- If you prefer your own `main()`, link only `gtest`.
+- Avoid linking both `gtest_main` and your own `main()` together.
 
-- **Run `make clean` or equivalent before rebuilding:**
-  - Stale object files with different compiler versions cause conflicts.
+### CMake and Bazel Misconfigurations
 
-- **Verify environment PATH and library paths:**
-  - Make sure there are no conflicting versions of GoogleTest or GoogleMock installed globally.
+- Misconfiguring `BUILD_SHARED_LIBS` in CMake may cause runtime linkage problems or wrong CRT linkage on Windows.
+- When including GoogleTest as a subdirectory, ensure your compiler and linker flags are consistent across your project and the GoogleTest library.
+- For Bazel, verify workspace setup and target dependencies properly include GoogleTest and GoogleMock.
 
-### 3.2 Dealing with Compilation Warnings and Errors
+### Platform Specific Quirks
 
-- **Warning about overriding virtual methods with const parameters:**
-  - It's a known MSVC issue that top-level const parameters cause warnings.
-  - Suggested fix: remove the `const` qualifier in method parameters where possible.
-
-- **Errors related to MOCK_METHOD macro parsing:**
-  - Wrap complex return or argument types containing commas with extra parentheses.
-  - Example:
-
-    ```cpp
-    MOCK_METHOD((std::pair<bool, int>), GetPair, ());
-    ```
-
-### 3.3 Controlling Build Verbosity for Debugging
-
-- Use `--gmock_verbose=info` at runtime to trace mock calls and expectations.
-- Use `--gtest_stack_trace_depth=0` to limit stack trace clutter.
-
-### 3.4 Handling Linker Errors
-
-- Ensure that both GoogleTest and GoogleMock libraries are built with the same runtime settings (static/dynamic CRT).
-- Add necessary linker flags such as `-lpthread` on Unix-like platforms.
+- **Windows:** Incorrect runtime library linkage (`/MT` vs `/MD`) can cause build or runtime failures. Use `gtest_force_shared_crt` in CMake to align CRT linkage.
+- **MinGW:** pthreads support is limited; GoogleTest disables pthreads by default and uses native Windows threading.
+- **Configuring Exception and RTTI Flags:** GoogleTest’s build scripts control exception handling and RTTI flags, avoid overriding them inconsistently which can cause build errors.
 
 ---
 
-## 4. Reference to Key GoogleMock Configuration and Behavior
+## Diagnostic Steps
 
-- Use `ON_CALL()` and `EXPECT_CALL()` properly to define default and expected behaviors.
-- Verify that expectations are set **before** exercising mocks to avoid undefined behavior.
-- Use `Mock::VerifyAndClearExpectations()` to force verification before destruction if needed.
-- Use `Mock::AllowLeak()` to mark mocks that do not need verification for cases like intentionally leaked mocks.
+Follow these logical steps to diagnose and fix build/linking problems:
 
----
-
-## 5. Common Pitfalls to Avoid
-
-- Setting expectations after mock calls causes undefined behavior.
-- Incorrect use of `MOCK_METHOD` macro without proper parentheses around argument types with commas.
-- Mixing versions of GoogleTest/GoogleMock headers and libraries.
-- Not cleaning up build artifacts after changing compilers or versions.
-
----
-
-## 6. Additional Resources
-
-- [GoogleMock Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
-- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [Setup and Build Integration Guide](https://google.github.io/googletest/guides/getting-started/setup-build-integration)
-- [Supported Platforms and Dependencies](https://google.github.io/googletest/overview/feature-architecture-and-integration/supported-platforms-and-dependencies)
+<Steps>
+<Step title="Check Include and Linkage Settings">
+Verify your project includes the correct GoogleTest headers and links against `gtest` or `gtest_main`.
+</Step>
+<Step title="Verify Build Options Consistency">
+Ensure that `BUILD_SHARED_LIBS`, `gtest_force_shared_crt`, and your CRT linkage settings align between your project and GoogleTest.
+</Step>
+<Step title="Examine Compiler and Linker Flags">
+Make sure that flags like exceptions and RTTI settings are consistent and compatible.
+</Step>
+<Step title="Validate Platform-Specific Settings">
+Confirm platform-specific considerations such as threading and runtime libraries are appropriately configured.
+</Step>
+<Step title="Review Build System Integration">
+For CMake, check usage of `add_subdirectory`, `find_package`, and FetchContent methods.
+For Bazel, verify workspace and target rules correctness.
+</Step>
+</Steps>
 
 ---
 
-## 7. Summary
+## Tips and Best Practices
 
-This document covers practical troubleshooting techniques and configuration guidance to help users overcome build issues with GoogleTest and GoogleMock. From compiler and environment setup to build system configuration, users are walked through key areas of failure and provided actionable steps to fix them.
-
----
-
-### Example Build Warning Fix
-
-If MSVC shows warnings about `const` parameters in virtual methods:
-
-```cpp
-// Instead of this:
-MOCK_METHOD(void, Bar, (const int i), (override));
-
-// Use this:
-MOCK_METHOD(void, Bar, (int i), (override));
-```
-
-### Example Complex Type Mock Method
-
-```cpp
-class MyMock {
- public:
-  MOCK_METHOD((std::pair<bool, int>), GetPair, ());
-  MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
-};
-```
+- Use `gtest_main` to simplify test executables unless you need a custom `main()`.
+- When integrating GoogleTest with CMake, prefer FetchContent or `add_subdirectory` to ensure compatible compiler/linker flags.
+- On Windows, if you get `RuntimeLibrary` mismatch linker errors, set `gtest_force_shared_crt=ON`.
+- Avoid mixing shared and static builds inadvertently.
+- Always verify that the compiler supports at least C++17 standard as required by GoogleTest.
+- Use verbose build output (e.g., `VERBOSE=1` with Make, or `/VERBOSE` in MSVC) to track exact linker commands.
 
 ---
 
-For additional help and community support, consult the [GoogleTest and GoogleMock community forums](https://github.com/google/googletest/issues) and official documentation.
+## References and Known Issues
 
+- See the [Integration and Dependencies](https://github.com/google/googletest/blob/main/overview/architecture-integration-usecases/integration-and-dependencies.mdx) guide for detailed integration instructions.
+- For troubleshooting specific build problems, consult the [Common Issues & Gotchas](https://github.com/google/googletest/blob/main/getting-started/troubleshooting-validation/common-issues.mdx) documentation.
+- Platform-specific compatibility and requirements are outlined in [Supported Platforms](https://github.com/google/googletest/blob/main/faq/core-questions/compatibility.mdx).
 
 ---
 
-<Check>
-Always ensure your build environment meets the minimum compiler and dependency requirements before integrating GoogleTest and GoogleMock.
-</Check>
+## Additional Resources
+
+- [Building and Configuring Your Project](https://github.com/google/googletest/blob/main/getting-started/prerequisites-installation/building-configuring-project.mdx): Step-by-step instructions for CMake and Bazel integration.
+- [GoogleTest README](https://github.com/google/googletest/blob/main/googletest/README.md): What to know about build environment and flags.
+- [Build System Integration Guide](https://github.com/google/googletest/blob/main/guides/integration_real_world_use/build_system_integration.mdx): Practical integration examples and troubleshooting.
+
+---
+
+## Troubleshooting Quick Checklist
+
+<AccordionGroup title="Troubleshooting Build and Linking Errors">
+<Accordion title="Missing Symbols / Undefined References">
+Make sure to link with `gtest` or `gtest_main` and GoogleMock libraries if used. Verify that your linker paths include GoogleTest build output.
+</Accordion>
+<Accordion title="Multiple Definitions of `main`">
+Do not link both `gtest_main` and provide your own main function. Choose one.
+</Accordion>
+<Accordion title="Runtime Library Conflicts (Windows)">
+Match CRT linkage between your project and GoogleTest via the `gtest_force_shared_crt` CMake option.
+</Accordion>
+<Accordion title="Pthreads Not Found or Unsupported">
+GoogleTest disables pthreads on unsupported systems (like MinGW). Avoid forcing pthread linkage on unsupported platforms.
+</Accordion>
+<Accordion title="Compile Flags Conflicts">
+Ensure exception handling, RTTI, and warning flags are consistent. GoogleTest build scripts tweak these appropriately.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## Summary
+
+Proper build and linking of GoogleTest projects requires careful setup of compiler and linker flags, consistent C++ standard support, and correct usage of libraries like `gtest_main`. Pay special attention to platform-specific quirks, especially on Windows. When integrating with CMake or Bazel, rely on documented mechanisms such as FetchContent or predefined workspace rules. Avoid mixing runtimes and ensure that your test entry point and linked libraries correspond correctly.
 
 <Tip>
-Leverage the official CMake or Bazel configuration files to streamline building and linking against GoogleTest and GoogleMock.
+Remember: linking errors usually come down to missing libraries or conflicting definitions. A methodical check of your build system setup and dependencies will resolve most problems.
 </Tip>
 
-<Warning>
-Avoid mixing header versions and binaries from different GoogleTest or GoogleMock releases to prevent subtle build and runtime issues.
-</Warning>
+---
+
+## Example Minimal CMake Usage
+
+```cmake
+cmake_minimum_required(VERSION 3.14)
+project(MyTestProject LANGUAGES CXX)
+
+# Enable C++17 standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Include GoogleTest using FetchContent
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/main.zip
+)
+# Force shared CRT on Windows; helps avoid linker mismatches
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+add_executable(my_test test_main.cpp)
+# Link with gtest_main to get default main() implementation
+target_link_libraries(my_test PRIVATE gtest_main)
+
+include(GoogleTest)
+gtest_discover_tests(my_test)
+```
+
+## Troubleshooting Common Linker Error Example
+
+```
+undefined reference to `testing::InitGoogleTest(int*, char**)'
+undefined reference to `main'
+```
+- Cause: Not linking against `gtest_main` or `gtest`.
+- Solution: Link your test binary with `gtest_main` if you don't have your own `main()`.
+
+---
+
+## Further Help
+
+For any remaining build and linking issues:
+
+- Review your CMake or Bazel build configuration.
+- Consult the GoogleTest GitHub issues page.
+- Seek advice on community forums or Stack Overflow using tags `googletest` and `gmock`.
+
+
+---
+
+# End of Build and Linking Errors Documentation
